Modify styles.css and rectify list padding

--- a/src/components/CharacterCard/CharacterCard.css
+++ b/src/components/CharacterCard/CharacterCard.css
@@ -23,8 +23,9 @@
 
 @media screen and (min-width: 768px) {
   .characters-list {
-    display: flex;
+    display: grid;
     flex-direction: row;
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
     min-height: 100vh;
   }
