--- a/src/components/CharactersList/CharactersList.css
+++ b/src/components/CharactersList/CharactersList.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   min-height: 100vh;
   gap: 50px;
   padding-right: 40px;
@@ -12,8 +11,7 @@
 
 @media screen and (min-width: 768px) {
   .characters-list {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     width: 100%;
     min-height: 100vh;
   }
