--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,23 +4,22 @@
   box-sizing: border-box;
 }
 
-* {
+html {
+  font-family: "Lexend Deca", sans-serif;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
   background-color: #2f312f;
   color: rgb(236, 242, 247);
 }
 
-html {
-  font-family: "Lexend Deca", sans-serif;
-}
-body {
-  margin: 0;
-  min-width: 100%;
-}
 ul {
   list-style: none;
+  padding: 0px;
 }
 
 img {
   max-width: 100%;
-  max-height: 100%;
 }
