--- a/src/components/ButtonComponent/ButtonComponent.css
+++ b/src/components/ButtonComponent/ButtonComponent.css
@@ -2,10 +2,24 @@
   display: flex;
   padding: 10px;
   flex-direction: column;
-  border-radius: 50%;
+  border-radius: 25%;
   align-items: center;
   justify-content: center;
-  width: 10%;
+  width: 65px;
+  height: 65px;
   border-color: rgb(192, 192, 59);
   background-color: rgb(231, 211, 96);
+  overflow: hidden;
+  font-family: "Lexend Deca", sans-serif;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .button-reset {
+    display: flex;
+    flex-direction: row;
+    width: 80px;
+    height: 80px;
+  }
 }
