--- a/src/components/CharactersList/CharactersList.css
+++ b/src/components/CharactersList/CharactersList.css
@@ -5,14 +5,16 @@
   align-items: center;
   min-height: 100vh;
   gap: 50px;
-  padding-right: 40px;
   margin: 0px;
 }
 
 @media screen and (min-width: 768px) {
   .characters-list {
     display: grid;
+    flex-direction: row;
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
     min-height: 100vh;
+    padding: 30px;
   }
 }
