--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,5 +21,10 @@ ul {
 }
 
 img {
-  max-width: 100%;
+  max-width: 70%;
+  max-height: 90%;
+}
+
+button:hover {
+  background-color: rgb(227, 233, 238);
 }
